@@ -48,6 +48,7 @@
 -Removed non functional menus and changed some key bindings (see KEYBOARD)
 -Added command line parameters
 -Fixed cases where control panel would set the player location when it shouldn't
+-Fix more spurious ineraction of control panel and player
 
 1.0.1 - September 23, 2004
 -Add tooltips for control panel buttons
